samples/_failures_safe/1761072065_547a2a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f1545c7.c: In function ‘main’:
./samples/SAFE/__tmp_9f1545c7.c:137:5: error: expected identifier or ‘(’ at end of input
  137 |     int
      |     ^~~
./samples/SAFE/__tmp_9f1545c7.c:137:5: error: expected declaration or statement at end of input
